--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Expense Tracker -- Project-01
+name: Covid Info-Panel -- Project-02
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
